# cezzis-com-local-bootstrapper

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  README.md  makefile  pyproject.toml  pytest.ini  rabbitmq.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/hooks/: policy.json
.github/hooks/scripts/: policy_hook.py
.github/instructions/: bootstrapper-python.instructions.md  infrastructure-manifests.instructions.md  workflows.instructions.md
.github/skills/add-bootstrapper-concern/: SKILL.md
.github/workflows/: cezzis-com-bootstrapper-cicd.yaml
.iac/argocd/: cezzis-com-local-boostrapper.yaml  cezzis-com-local-bootstrapper-cloudsync.yaml  cezzis-com-local-bootstrapper-loc.yaml  image-updater-cloudsync.yaml  image-updater-loc.yaml  image-updater.yaml
.iac/k8s/: .argocd-source-cezzis-com-local-bootstrapper.yaml  cezzis-com-local-bootstrapper.yml  configmap.yml  external-secrets.yml  image-update-automation.yaml  image-update-automation.yml  image-updater.yml  job.yml  kustomization.yaml  namespace.yml  rabbitmq-configmap.yml
.iac/k8s-cloudsync/: configmap.yml  external-secrets.yml  job.yml  kustomization.yaml
.iac/k8s-loc/: configmap.yml  external-secrets.yml  kustomization.yaml  rabbitmq-configmap.yml
.scripts/: post_install.py
src/cezzis_com_bootstrapper/: .env  app_module.py  main.py
src/cezzis_com_bootstrapper/application/: __init__.py
src/cezzis_com_bootstrapper/application/behaviors/: __init__.py
src/cezzis_com_bootstrapper/application/behaviors/exception_handling/: global_exception_handler.py
src/cezzis_com_bootstrapper/application/behaviors/otel/: __init__.py  initialize_otel.py
src/cezzis_com_bootstrapper/application/concerns/: __init__.py
src/cezzis_com_bootstrapper/domain/: __init__.py
src/cezzis_com_bootstrapper/domain/config/: __init__.py  azure_storage_options.py  bootstrapper_options.py  cosmosdb_options.py  kafka_options.py  otel_options.py  qdrant_options.py  rabbitmq_options.py
src/cezzis_com_bootstrapper/domain/messaging/: __init__.py  rabbitmq_binding.py  rabbitmq_binding_type.py  rabbitmq_configuration.py  rabbitmq_exchange.py  rabbitmq_exchange_type.py  rabbitmq_queue.py
src/cezzis_com_bootstrapper/infrastructure/services/: __init__.py  azure_blob_service.py  cosmosdb_service.py  iazure_blob_service.py  icosmosdb_service.py  ikafka_service.py  iqdrant_service.py  irabbitmq_admin_service.py  kafka_service.py  qdrant_service.py  rabbitmq_admin_service.py
test/unit/: test_init_main.py
(+16 files in other folders)
